@@ -1,2 +1,3 @@
 *~
-dist/
+_build/
+*.native
