@@ -1,11 +1,0 @@
-name: mirari
-version: 0.9.4
-synopsis: Mirage application builder
-obuild-ver: 1
-authors: Thomas Gazagnaire, Anil Madhavapeddy, Vincent Bernardoff
-license: ISC
-
-executable mirari
-  main: main.ml
-  src-dir: lib
-  build-deps: cmdliner, unix, tuntap, fd-send-recv
